# GD-CAF

./: .gitignore  README.md  pyproject.toml  requirements.txt  root.py  test_models.py  train_precip_lightning.py
db/checkpoints/: GDCAF_epoch=74-val_loss=0.788917.ckpt
db/saved_models/exp1/: GDCAF_L_2_K_4_kpl_2_in_6_out_6_cut_16_epoch=57-val_loss=0.902167_no_pooling.ckpt  GDCAF_L_2_K_4_kpl_2_in_6_out_6_cut_16_epoch=66-val_loss=0.889043_input_False_QKV_True.ckpt  GDCAF_L_2_K_4_kpl_2_in_6_out_6_cut_16_epoch=84-val_loss=0.896012_input_true_qkv_false.ckpt
db/saved_models/exp2/: GDCAF_L_2_K_4_kpl_2_in_6_out_6_cut_1_epoch=42-val_loss=0.759513.ckpt  GDCAF_L_2_K_4_kpl_2_in_6_out_6_cut_2_epoch=62-val_loss=0.173544.ckpt  GDCAF_L_2_K_4_kpl_2_in_6_out_6_cut_4_epoch=48-val_loss=0.341500.ckpt  GDCAF_L_2_K_4_kpl_2_in_6_out_6_cut_8_epoch=62-val_loss=0.564433.ckpt
db/saved_models/exp3/: GDCAF_L_2_K_4_kpl_2_in_12_out_1_cut_16_epoch=60-val_loss=0.250924.ckpt  GDCAF_L_2_K_4_kpl_2_in_12_out_3_cut_16_epoch=56-val_loss=0.569842.ckpt  GDCAF_L_2_K_4_kpl_2_in_12_out_6_cut_16_epoch=71-val_loss=0.822776.ckpt  GDCAF_L_2_K_4_kpl_2_in_6_out_1_cut_16_epoch=53-val_loss=0.257631.ckpt  GDCAF_L_2_K_4_kpl_2_in_6_out_3_cut_16_epoch=67-val_loss=0.594916.ckpt  (+4 more)
metrics/: metric.py  persistence.py
models/: GD_CAF.py  model_base.py  unets.py
send_data_files/1_parameter/: README.md
send_data_files/multiple_parameters/: README.md  download_precipitation_maps.py
utils/: cell_positions.csv  dataset_one_picture_to_grid_europe.py  model_classes.py  test_data_loader.py
(+1 files in other folders)
