[tool.poetry]
name = "gd-caf"
version = "0.1"
description = "Repository for the paper: GD-CAF: Graph Dual-stream Convolutional Attention Fusion for weather nowcasting"
authors = ["Lóránd <vatamany.l@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytorch-lightning = "^2.1.3"
xarray = "^2023.12.0"
tensorboard = "^2.15.1"
scipy = "^1.11.4"
numpy = "^1.26.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
